--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "prometheus-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vdugeri.github.io/promethius-test",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
+    "gh-pages": "^2.0.1",
     "path": "^0.12.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -21,7 +23,9 @@
     "start": "node server",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
