Change homepage url

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prometheus-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vdugeri.github.io/promethius-test",
+  "homepage": "https://wnations.herokuapp.com/",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
